增加音乐播放器
